# task-manager

./: .env.example  .gitignore  justfile  pyproject.toml
docker/: storages.yaml
src/: config.py  database.py  main.py
src/alembic/: env.py
src/models/: task.py
